Colaboratory を使用して作成しました

--- a/株価相関.ipynb
+++ b/株価相関.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "thanFoLIc8KS",
         "colab_type": "code",
-        "outputId": "990bbd92-fd82-4f3d-8d8c-f3322dc57928",
+        "outputId": "0fa2328e-f35d-4f85-e2ab-7c3cc5424958",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
@@ -56,7 +56,7 @@
         "# Import yfinance\n",
         "import yfinance as yf  "
       ],
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,13 +68,13 @@
             "Requirement already satisfied: webencodings in /usr/local/lib/python3.6/dist-packages (from html5lib) (0.5.1)\n",
             "Requirement already satisfied: yfinance in /usr/local/lib/python3.6/dist-packages (0.1.50)\n",
             "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.21.0)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.17.3)\n",
-            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.25.3)\n",
             "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
+            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.25.3)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.17.3)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.8)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2019.9.11)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
             "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
-            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.8)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
             "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.6.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n"
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "sqm_X-wFrDR_",
         "colab_type": "code",
-        "outputId": "87825b99-dd23-4a04-f5d4-03e9c5ecb2e5",
+        "outputId": "f7d95828-4ca5-470a-bbfe-83917d10d2e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -100,7 +100,7 @@
         "sp500_list=pd.read_html(url)[0].Symbol.values.tolist()\n",
         "len(sp500_list)"
       ],
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,16 +112,31 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Aw_LpmPiUrTU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#yahooでは銘柄シンボルの\".\"は\"-\"に変えないとエラーになるので置換\n",
+        "#\".\"を\"-\"に置換\n",
+        "sp500_list_yahoo=[i.replace(\".\",\"-\")for i in sp500_list]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab_type": "code",
         "id": "5LG9O59jz1KV",
-        "outputId": "477c7710-9f7c-4a17-b3af-24f617494567",
+        "outputId": "f1f4a477-2e9b-4eb4-eb79-1e8f393038c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -131,7 +146,7 @@
         "#sp500銘柄の終値を１つのDataFrameに格納\n",
         "close_sp500_list=yf.download(sp500_list_yahoo,'2019-10-04','2019-11-01')[\"Adj Close\"]\n"
       ],
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +162,7 @@
       "metadata": {
         "id": "8hKtCRf5Xlfk",
         "colab_type": "code",
-        "outputId": "e3afbe2e-c5db-4796-ef11-365e42be8bbd",
+        "outputId": "ff278325-d8c0-413f-c35e-b9d78ddaf856",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -156,7 +171,7 @@
       "source": [
         "len(list(itertools.combinations(sp500_list,2)))\n"
       ],
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +183,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 8
         }
       ]
     },
@@ -201,11 +216,11 @@
       "metadata": {
         "id": "v29NWQ9baMe2",
         "colab_type": "code",
-        "outputId": "ada45c34-079e-47b7-9c2e-e1a6e92d655a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 263
-        }
+        },
+        "outputId": "381402c6-1ad7-4e50-8442-53bc5dc57acf"
       },
       "source": [
         "#出力された結果\"correlations\"はリスト形式なのでDataFrameに変換\n",
@@ -213,7 +228,7 @@
         "result.columns=['PCC','p-value']\n",
         "print(result.sort_values('PCC'))"
       ],
-      "execution_count": 20,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,6 +251,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N8CERE1zzvCZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#上位１０ペアのグラフを表示\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
